tests/ui/derive-struct.rs
#[macro_use]
extern crate api_error_derive;

#[derive(ErrorStatus)]
struct Test;

